--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+body {
+	background-image: linear-gradient(180deg, #aad0df, #ffa9b8, #aad0df);
+	min-height: 100vh;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+	height: 1rem;
+	padding: 0.5rem;
+	text-align: center;
+	border-radius: 20px;
+	border: 2px, solid, black;
+	background-color: #a4d3e4;
+	box-sizing: content-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover {
+	background-color: #62fbfd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#Button-container {
+	width: 80%;
+	margin-inline: auto;
+	display: flex;
+	flex-flow: row, nowrap;
+	justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#Content-div {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	max-width: 90%;
+	margin-inline: auto;
 }
