--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@ body {
 
 button {
 	height: 1rem;
-	padding: 0.5rem;
+	padding: 0.75rem;
+	font-size: 1em;
 	text-align: center;
 	border-radius: 20px;
-	border: 2px, solid, black;
+	border: 2px solid black;
 	background-color: #a4d3e4;
 	box-sizing: content-box;
 }
